--- a/TrinityCreator/App.config
+++ b/TrinityCreator/App.config
@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="TrinityCreator.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+      <section name="TrinityCreator.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <userSettings>
     <TrinityCreator.Properties.Settings>
@@ -17,16 +17,16 @@
         <value>True</value>
       </setting>
       <setting name="worldDb" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="DbcDir" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="lookupToolWidth" serializeAs="String">
         <value>400</value>
       </setting>
       <setting name="ActiveProfilePath" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="disableWeaponCreationNotice" serializeAs="String">
         <value>False</value>
@@ -40,17 +40,49 @@
   
             <dependentAssembly>
   
-                 <assemblyIdentity name="Google.Protobuf" publicKeyToken="a7d26565bac4d604" culture="neutral"/>
+                 <assemblyIdentity name="Google.Protobuf" publicKeyToken="a7d26565bac4d604" culture="neutral" />
   
-                 <bindingRedirect oldVersion="0.0.0.0-3.11.2.0" newVersion="3.11.2.0"/>
+                 <bindingRedirect oldVersion="0.0.0.0-3.21.1.0" newVersion="3.21.1.0" />
   
             </dependentAssembly>
   
             <dependentAssembly>
   
-                 <assemblyIdentity name="BouncyCastle.Crypto" publicKeyToken="0e99375e54769942" culture="neutral"/>
+                 <assemblyIdentity name="BouncyCastle.Crypto" publicKeyToken="0e99375e54769942" culture="neutral" />
   
-                 <bindingRedirect oldVersion="0.0.0.0-1.8.5.0" newVersion="1.8.5.0"/>
+                 <bindingRedirect oldVersion="0.0.0.0-1.8.9.0" newVersion="1.8.9.0" />
+  
+            </dependentAssembly>
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+  
+            </dependentAssembly>
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
+  
+            </dependentAssembly>
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="K4os.Hash.xxHash" publicKeyToken="32cd54395057cec3" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-1.0.7.0" newVersion="1.0.7.0" />
+  
+            </dependentAssembly>
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="K4os.Compression.LZ4.Streams" publicKeyToken="2186fa9121ef231d" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-1.2.16.0" newVersion="1.2.16.0" />
   
             </dependentAssembly>
   
