--- a/TrinityCreator.Shared/app.config
+++ b/TrinityCreator.Shared/app.config
@@ -8,7 +8,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Google.Protobuf" publicKeyToken="a7d26565bac4d604" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.21.1.0" newVersion="3.21.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.23.2.0" newVersion="3.23.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="K4os.Compression.LZ4.Streams" publicKeyToken="2186fa9121ef231d" culture="neutral" />
@@ -25,6 +25,10 @@
       <dependentAssembly>
         <assemblyIdentity name="K4os.Hash.xxHash" publicKeyToken="32cd54395057cec3" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.0.7.0" newVersion="1.0.7.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.IO.Pipelines" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
